Fix: modification de openapi.yalm
